@@ -1,4 +1,8 @@
-﻿svs 11.04.2016 10:16:53 +0300 - build 4619
+﻿zg 13.04.2016 23:39:18 +0200 - build 4620
+
+1. 0003212: Зависание при вызове ShowHelp/DialogRun после VCTL_QUIT/ECTL_QUIT.
+
+svs 11.04.2016 10:16:53 +0300 - build 4619
 
 1. SQLite 3.12.1
 
@@ -115,7 +119,7 @@ w17 24.03.2016 16:14:28 +0300 - build 4595
 w17 24.03.2016 14:55:56 +0300 - build 4594
 
 1. Продолжение 4590.
-   Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S. 
+   Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S.
 
 drkns 24.03.2016 02:05:31 +0200 - build 4593
 
